--- a/style.css
+++ b/style.css
@@ -1,5 +1,30 @@
-p{
-  color: blue;
-  font-size: 16px;
-  line-height: 1.5;
+@import url('https://fonts.googleapis.com/css2?family=poppins:wght@300;400;500;600;700;800;900&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+body{
+    background-color: #081b29;
+}
+.header{
+    width: 100%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+padding: 20PX 10%;
+background: yellowgreen;
+z-index: 100;
+}
+.logo{
+  font-size: 25px;
+ color: #ededed;
+ text-decoration: none;
+ font-weight: 600;
 }
